--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,114 @@
+html, body {
+    height: 100%;
+}
+
 body {
     /*background-color: gray;*/
-    background-image: url("../images/concrete_seamless.png")
+    background-image: url("../images/concrete_seamless.png");
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    color:#777777;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
     background-color: #ffffff;
-    width: 100%;
-    border-bottom: 2px solid #dddddd;
+    border-bottom: 3px solid #cccccc;
 }
 
 main {
-    max-width: 960px;
+    max-width: 900px;
     background-color: #ffffff;
     border: 1px solid #dddddd; 
     margin-top: 20px;
 	margin-right: auto;
-	margin-bottom: 0;
+	margin-bottom: 90px;
 	margin-left: auto;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 10px;
-	padding-left: 0px;
-	position: relative;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 20px;
+    padding:30px;
+    flex: 1 0 auto;
+}
 
+section {
+    margin-top: 20px;
+}
+
+nav li {
+    display: inline;
+    padding: 0 10px;
+
+}
+
+
+nav a {
+    text-decoration: none;
+    color: #777777;
+    padding: 5px;
+}
+
+nav a:hover { 
+    background-color: #4aaaa5;
+    color: #ffffff;
+    border-radius: 4px;
+
+}
+
+h1 {
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-size: 25px;
+    font-weight: bold;
+    color: #4aaaa5;
+    border-bottom: 3px solid #dddddd;
+    padding-bottom: 30px;
+
+}
+
+p {
+    margin-bottom: 10px;
+    line-height: 200%;
 }
 
 footer {
     background-color: #666666;
-    width: 100%;
     border-top: 10px solid #4aaaa5;
+    color: #dddddd;
+    text-align: center;
+    vertical-align: text-bottom;
+    padding: 20px;
+    font-size: 12px;
+    height: 18px;
+    flex-shrink: 0;
+}
+
+
+
+
+/* class styles */
+.headercontainer {
+    margin: 0 auto;
+    max-width: 960px;
+    height: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.logo {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 31px;
+    font-size: 28px;
+    font-weight: bold;
+
+    font-family: Georgia, Times, 'Times New Roman', serif;
+}
+
+.profile-image {
+    float: left;
+    margin-right: 20px;
+}
+
+.border-right {
+    border-right: #666666 solid 1px;
+    text-align: center;
 }
