--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,12 +32,16 @@ section {
     margin-top: 20px;
 }
 
+.portfolio-section {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 nav li {
     display: inline;
     padding: 0 10px;
 
 }
-
 
 nav a {
     text-decoration: none;
@@ -80,9 +84,6 @@ footer {
 }
 
 
-
-
-/* class styles */
 .headercontainer {
     margin: 0 auto;
     max-width: 960px;
@@ -99,7 +100,6 @@ footer {
     padding: 31px;
     font-size: 28px;
     font-weight: bold;
-
     font-family: Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -109,6 +109,35 @@ footer {
 }
 
 .border-right {
-    border-right: #666666 solid 1px;
+    border-right: #f2f2f2 solid 1px;
     text-align: center;
+}
+
+.tile {
+    position: relative;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    margin: 10px;
+}
+
+.tile-text {
+    position: absolute;
+    bottom: 9px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-size: 24px;
+    width: 234px;
+    padding: 20px;
+    text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+    .headercontainer {
+        margin: 0 auto;
+        max-width: 960px;
+        height: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
 }
